[*] bo ps1.5 affichage

--- a/views/css/tabs.css
+++ b/views/css/tabs.css
@@ -150,3 +150,9 @@
     border-bottom: none;
     text-decoration: none;
 }
+
+label[for=secure_all], label[for=secure_only] {
+	width: inherit;
+	float: none;
+	text-align: left;
+}
