--- a/views/css/front.css
+++ b/views/css/front.css
@@ -1,78 +1,80 @@
 div.payment_module { padding-bottom: 35px;     margin-bottom: 10px; text-transform: none; }
 .stripe_title img { float: none; margin-right: 8px; margin-top: -2px; vertical-align: middle; }
-#stripe-payment-form {}
-#stripe-payment-form label { display: inline-block; margin-bottom: 4px; text-transform: uppercase; }
+#stripe-payment-form {    margin: 0 auto;}
+#stripe-payment-form label { display: inline-block; margin-bottom: 4px; }
 #stripe-payment-form label.lowercase { text-transform: none; }
-#stripe-payment-form input[type="text"], #stripe-payment-form select { border: #CCCCCC solid 1px; margin-bottom: 15px; padding: 3px; }
+#stripe-payment-form input[type="text"], #stripe-payment-form select {
+    border: #CCCCCC solid 1px; margin-bottom: 15px; padding: 3px;     box-sizing: border-box;
+}
 #stripe-payment-form input[type="checkbox"] { margin-bottom: 15px; }
 
 #stripe-payment-form input.stripe-card-cvc {  }
 #stripe-form a { display: inline; position: relative; }
 a.stripe-card-cvc-info { font-style: italic; }
 a.stripe-card-cvc-info div.cvc-info {
-	background-color: #BDE5F8;
-	border: #00529B solid 1px;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
-	color: #00529B!important;
-	display: none;
-	font-style: normal;
-	padding: 8px;
-	position: absolute;
-	right: -320px; top: -10px;
-	text-decoration: none;
-	width: 300px;
+    background-color: #BDE5F8;
+    border: #00529B solid 1px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    color: #00529B!important;
+    display: none;
+    font-style: normal;
+    padding: 8px;
+    position: absolute;
+    right: -320px; top: -10px;
+    text-decoration: none;
+    width: 300px;
 }
 a.stripe-card-cvc-info:hover div.cvc-info { display: block; }
 div.cvc-info:hover { cursor: default; }
 #stripe-payment-form img.cc-icon { border: #CCCCCC solid 1px; float: left; margin-right: 5px; }
 .block-left {
-	display: inline-block; float: left; margin-right: 39px;
+    display: inline-block; float: left; margin-right: 20px;
 }
 img.disable { opacity: 0.3; }
 img.enable { opacity: 1; }
 #stripe-payment-form-cc .stripe-submit-button-cc { margin-left: 5px; }
 #stripe-payment-form-cc a { display: inline; font-size: 11px; text-decoration: underline; }
 #stripe-payment-form .stripe-submit-button, #stripe-payment-form-cc .stripe-submit-button-cc {
-	position:relative;
-	display:inline-block;
-	padding:5px 7px;
-	border:1px solid rgba(77, 96, 113, 0.63);
-	-webkit-border-radius: 3px;
-	border-radius: 3px;
-	font-weight:bold;
-	color:#fff;
-	background-color: rgb(91, 155, 213);
-	cursor: pointer;
-	margin-bottom: 15px;
+    position:relative;
+    display:inline-block;
+    padding:5px 7px;
+    border:1px solid rgba(77, 96, 113, 0.63);
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    font-weight:bold;
+    color:#fff;
+    background-color: rgb(91, 155, 213);
+    cursor: pointer;
+    margin-bottom: 15px;
 }
 #stripe-payment-form .stripe-submit-button:hover, #stripe-payment-form-cc .stripe-submit-button-cc:hover {
-	text-decoration:none;
-	background-position: left -50px
+    text-decoration:none;
+    background-position: left -50px
 }
 div.stripe-payment-errors {
-	margin: 0 0 10px 0;
-	padding: 10px;
-	border: 1px solid #900;
-	color: #900;
-	font-size: 13px;
-	background: #FCC;
-	display: none;
+    margin: 0 0 10px 0;
+    padding: 10px;
+    border: 1px solid #900;
+    color: #900;
+    font-size: 13px;
+    background: #FCC;
+    display: none;
 }
 
 div.stripe-card-deleted {
-	margin: 0 0 10px 0;
-	padding: 10px;
-	border: 1px solid #ade27d;
-	font-size: 13px;
-	background: #d3ffab;
-	display: none;
-	text-transform: none;
+    margin: 0 0 10px 0;
+    padding: 10px;
+    border: 1px solid #ade27d;
+    font-size: 13px;
+    background: #d3ffab;
+    display: none;
+    text-transform: none;
 }
 #stripe-payment-form .payment-ok, #stripe-payment-form .payment-ko {
-	display: none;
-	margin-left: -23px;
+    display: none;
+    margin-left: -23px;
 }
 #stripe-translations, #stripe-ajax-loader { display: none; }
 #stripe_save_token { vertical-align: top; }
@@ -80,18 +82,28 @@ a#stripe_error { display: none; }
 #stripe-payment-form input, #stripe-payment-form select { margin-left: 0; }
 #stripe-replace-card, #stripe-delete-card { border: none; padding: 0; cursor: pointer; }
 #stripe-payment-form {
-	width: 228px;
+    width: 228px;
 }
 #stripe-payment-form .stripe-name, #stripe-payment-form .stripe-card-number, #stripe-payment-form .stripe-submit-button {
-	width: 210px;
+    width: 210px;
 }
 #stripe-payment-form .stripe-card-cvc, #stripe-payment-form .stripe-card-expiry {
-	width:85px;
-	max-width: 85px;
-	text-align: center;
-	padding: 3px 1px !important;
+    width:95px;
+    max-width: 95px;
+    text-align: center;
+    padding: 3px 1px !important;
 }
 .powered_stripe {
-	float:right !important;
-	margin-right: 16px;
+    float:right !important;
+    margin-right: 18px !important;
+}
+.stripe-submit-button img {
+    width:12px;
+    position: absolute;
+    left: 10px;
+}
+h3.stripe_title {
+    font-size: 17px;
+    font-weight: bold;
+    color: #000;
 }
