--- a/views/css/front.css
+++ b/views/css/front.css
@@ -136,3 +136,13 @@ h3.stripe_title {
 	-webkit-box-shadow: 0 3px 9px rgba(0,0,0,.5);
 	background: white;
 }
+
+div.payment_module {
+	border: 0px solid #ffffff!important;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    padding-left: 15px;
+    padding-right: 15px;
+    background:#ffffff!important;
+}
