--- a/views/css/front.css
+++ b/views/css/front.css
@@ -35,6 +35,7 @@ div.cvc-info:hover { cursor: default; }
 }
 #stripe-payment-form h3 {
     padding-bottom: 10px;
+    margin-bottom: 0;
 }
 .block-left {
 	display: inline-block; float: left; margin-right: 6px;
