--- a/views/css/front.css
+++ b/views/css/front.css
@@ -147,3 +147,16 @@ div.payment_module {
     padding-right: 15px;
     background:#ffffff!important;
 }
+@media (max-width: 764px) {
+    #modal_stripe {
+        width: 90%;
+        margin: auto;
+        margin-top: 80px;
+        padding: 30px;
+        border-radius: 6px;
+        box-shadow: 0 5px 15px rgba(0,0,0,.5);
+        border: 1px solid rgba(0,0,0,.2);
+        -webkit-box-shadow: 0 3px 9px rgba(0,0,0,.5);
+        background: white;
+    }
+}
