--- a/views/css/front.css
+++ b/views/css/front.css
@@ -1,4 +1,4 @@
-div.payment_module { padding-bottom: 35px;     margin-bottom: 10px; text-transform: none; }
+div.payment_module.cart-stripe-official { padding-bottom: 35px;     margin-bottom: 10px; text-transform: none; }
 .stripe_title img { float: none; margin-right: 8px; margin-top: -2px; vertical-align: middle; }
 #stripe-payment-form {    margin: 0 auto;}
 #stripe-payment-form label { display: inline-block; margin-bottom: 4px; font-size: 14px;}
@@ -153,4 +153,40 @@ h3.stripe_title {
 		-webkit-box-shadow: 0 3px 9px rgba(0,0,0,.5);
 		background: white;
 	}
+}
+#modal_stripe_waiting {
+	height: 124px;
+	width: 341px;
+	background: white;
+	border-radius: 10px;
+	margin: 0 auto;
+	margin-top: 10%;
+	font-size: 16px;
+	padding: 28px;
+	border-radius: 6px;
+	box-shadow: 0 5px 15px rgba(0,0,0,.5);
+	border: 1px solid rgba(0,0,0,.2);
+	-webkit-box-shadow: 0 3px 9px rgba(0,0,0,.5);
+}
+.stripe-payment-europe-errors {
+	color:red;
+}
+.stripe-europe-payments img {
+	width:86px;
+	height:49px;
+}
+.stripe-europe-payments a {
+	display: block;
+	border: 1px solid #d6d4d4;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
+	font-size: 17px;
+	line-height: 23px;
+	color: #333;
+	font-weight: bold;
+	padding: 33px 40px 34px 99px;
+	letter-spacing: -1px;
+	position: relative;
+	background: #fbfbfb;
 }
