--- a/views/css/front.css
+++ b/views/css/front.css
@@ -150,7 +150,7 @@ h3.stripe_title {
 		background: white;
 	}
 }
-#modal_stripe_waiting, #modal-stripe-error {
+#modal_stripe_waiting, #modal-stripe-error, #sofort_available_countries {
 	height: 124px;
 	width: 341px;
 	background: white;
@@ -164,10 +164,25 @@ h3.stripe_title {
 	border: 1px solid rgba(0,0,0,.2);
 	-webkit-box-shadow: 0 3px 9px rgba(0,0,0,.5);
 }
+#sofort_available_countries {
+	height: 150px;
+}
+#sofort_available_countries div.title{
+	margin-bottom: 10px;
+}
+#sofort_available_countries select {
+	width: 130px;
+}
+#sofort_available_countries .btn {
+	margin-top: 10px;
+	border-radius: 5px;
+}
+
+
 .stripe-payment-europe-errors {
 	color:red;
 }
-.stripe-europe-payments a {
+.stripe-europe-payments a, .sofort-payment a {
 	display: block;
 	border: 1px solid #d6d4d4;
 	-moz-border-radius: 4px;
@@ -207,9 +222,9 @@ h3.stripe_title {
 }
 #stripe-payment-form .img-card {width: 33px;     margin-top: -77px;}
 #stripe-ajax-loader-europe {
-    text-align: center;
+	text-align: center;
 }
-.stripe-europe-payments img {
+.stripe-europe-payments img, .sofort-payment img {
 	margin-right: 20px;
 	height: 45px;
 }
