--- a/views/css/front.css
+++ b/views/css/front.css
@@ -1,8 +1,20 @@
 div.payment_module.cart-stripe-official { padding-bottom: 35px;     margin-bottom: 10px; text-transform: none; }
 .stripe_title img { float: none; margin-right: 8px; margin-top: -2px; vertical-align: middle; }
 #stripe-payment-form {    margin: 0 auto;}
-#stripe-payment-form label { display: inline-block; margin-bottom: 4px; font-size: 14px;}
+#stripe-payment-form label { display: inline-block !important; margin-bottom: 4px; font-size: 14px; font-weight: bold;}
 #stripe-payment-form label.lowercase { text-transform: none; }
+#stripe-payment-form label.required:before {
+	color: red;
+	content: "*";
+	font-size: 14px;
+	position: relative;
+	line-height: 12px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	/* display: block; */
+	float: initial;
+}
 #stripe-payment-form input[type="text"], #stripe-payment-form select {
 	border: #CCCCCC solid 1px; margin-bottom: 15px; padding: 3px;     box-sizing: border-box; font-size: 15px;
 }
@@ -28,15 +40,7 @@ a.stripe-card-cvc-info div.cvc-info {
 }
 a.stripe-card-cvc-info:hover div.cvc-info { display: block; }
 div.cvc-info:hover { cursor: default; }
-#stripe-payment-form img.cc-icon { 
-    float: left;
-    margin-right: 5px;
-    width: 31px;
-}
-#stripe-payment-form h3 {
-    padding-bottom: 10px;
-    margin-bottom: 0;
-}
+#stripe-payment-form img.cc-icon { border: #CCCCCC solid 1px; float: left; margin-right: 5px; }
 .block-left {
 	display: inline-block; float: left; margin-right: 6px;
 }
@@ -63,12 +67,12 @@ img.enable { opacity: 1; }
 }
 div.stripe-payment-errors, #stripe-payment-form #card-errors {
 	margin: 0 0 10px 0;
-	width: 210px;
 	padding: 10px;
 	border: 1px solid #900;
 	color: #900;
 	font-size: 13px;
 	background: #FCC;
+	width: 210px;
 	display: none;
 }
 
@@ -92,23 +96,14 @@ a#stripe_error { display: none; }
 #stripe-replace-card, #stripe-delete-card { border: none; padding: 0; cursor: pointer; }
 #stripe-payment-form {
 	width: 228px;
+	margin-top:15px;
 }
 #stripe-payment-form .stripe-name, #stripe-payment-form .stripe-card-number, #stripe-payment-form .stripe-submit-button {
 	width: 210px;
 }
-#stripe-payment-form .stripe-submit-button {
-	background-image: url('../img/lock-locked.png');
-	background-size: 12px 17px;
-	background-repeat: no-repeat;
-	background-position: 7px;
-}
-#stripe-payment-form .stripe-submit-button:hover {
-	background-position: 7px;
-}
-
 .powered_stripe {
 	margin-right: 6px !important;
-    height: 21px !important;
+	height: 21px !important;
 }
 .stripe-submit-button img {
 	width:12px;
@@ -127,6 +122,7 @@ h3.stripe_title {
 }
 #modal_stripe {
 	width: 600px;
+	height: 500px;
 	margin: auto;
 	margin-top: 80px;
 	padding: 30px;
@@ -137,20 +133,29 @@ h3.stripe_title {
 	background: white;
 }
 
-@media (max-width: 764px) {
-	#modal_stripe {
-		width: 90%;
-		margin: auto;
-		margin-top: 80px;
-		padding: 30px;
-		border-radius: 6px;
-		box-shadow: 0 5px 15px rgba(0,0,0,.5);
-		border: 1px solid rgba(0,0,0,.2);
-		-webkit-box-shadow: 0 3px 9px rgba(0,0,0,.5);
-		background: white;
-	}
+div.payment_module {
+	border: 0px solid #ffffff!important;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    padding-left: 15px;
+    padding-right: 15px;
+    background:#ffffff!important;
 }
-#modal_stripe_waiting, #modal-stripe-error, #sofort_available_countries {
+@media (max-width: 764px) {
+    #modal_stripe {
+        width: 90%;
+        margin: auto;
+        margin-top: 80px;
+        padding: 30px;
+        border-radius: 6px;
+        box-shadow: 0 5px 15px rgba(0,0,0,.5);
+        border: 1px solid rgba(0,0,0,.2);
+        -webkit-box-shadow: 0 3px 9px rgba(0,0,0,.5);
+        background: white;
+    }
+}
+#modal_stripe_waiting, #modal-stripe-error {
 	height: 124px;
 	width: 341px;
 	background: white;
@@ -164,25 +169,15 @@ h3.stripe_title {
 	border: 1px solid rgba(0,0,0,.2);
 	-webkit-box-shadow: 0 3px 9px rgba(0,0,0,.5);
 }
-#sofort_available_countries {
-	height: 150px;
-}
-#sofort_available_countries div.title{
-	margin-bottom: 10px;
-}
-#sofort_available_countries select {
-	width: 130px;
-}
-#sofort_available_countries .btn {
-	margin-top: 10px;
-	border-radius: 5px;
-}
-
-
 .stripe-payment-europe-errors {
 	color:red;
 }
-.stripe-europe-payments a, .sofort-payment a {
+.stripe-europe-payments img {
+	width:86px;
+	height:49px;
+	margin-right: 20px;
+}
+.stripe-europe-payments a {
 	display: block;
 	border: 1px solid #d6d4d4;
 	-moz-border-radius: 4px;
@@ -192,7 +187,7 @@ h3.stripe_title {
 	line-height: 23px;
 	color: #333;
 	font-weight: bold;
-	padding: 25px 40px 25px 20px;
+	padding: 28px 40px 28px 20px;
 	letter-spacing: -1px;
 	position: relative;
 	background: #fbfbfb;
@@ -219,12 +214,9 @@ h3.stripe_title {
 	max-width: 102px;
 	float: left;
 	padding: 3px 1px !important;
+	text-align: left;
 }
 #stripe-payment-form .img-card {width: 33px;     margin-top: -77px;}
 #stripe-ajax-loader-europe {
 	text-align: center;
-}
-.stripe-europe-payments img, .sofort-payment img {
-	margin-right: 20px;
-	height: 45px;
 }
