--- a/views/css/tabs.css
+++ b/views/css/tabs.css
@@ -20,12 +20,17 @@
 }
 
 .tabs-logo {
+	background: #FFFFFF;
+	border: 1px solid #DDDDDD;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
 	display: block;
+	margin: 0 auto 10px;
 	padding: 0;
-	width: 100%;
 	text-align: left;
-	margin: 0 auto;
 	max-width: 250px;
+	width: 100%;
 }
 
 .content-wrap section.content-current {
