refs #14252 #14390 : add domain for applePay + validate integer for 3D-secure amount

--- a/views/css/started.css
+++ b/views/css/started.css
@@ -165,6 +165,11 @@ table.stripe-cc-numbers td.number code { font-family: Courier; }
 .table .uppercase {
     text-transform: uppercase;
 }
+
+.add_domain {
+    width: 100%;
+}
+
 /* Retina support */
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
 only screen and (min--moz-device-pixel-ratio: 1.5),
