refs #16683 debug erreur console page order quand on choisit l'adresse

--- a/views/css/front.css
+++ b/views/css/front.css
@@ -197,6 +197,8 @@ div.payment_module {
 	width: 100%;
 	border: none;
 	padding: 0px;
+	height: 40px;
+	background: beige;
 }
 
 .product-additional-info #relative {
