--- a/views/css/checkout.css
+++ b/views/css/checkout.css
@@ -17,3 +17,66 @@
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
 }
+
+#stripe-card-payment {
+    border: 1px solid #d6d4d4;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    padding-left: 15px;
+    padding-right: 15px;
+    background: #fbfbfb;
+}
+
+#stripe-card-payment h3 {
+    padding-bottom: 10px;
+    margin-bottom: 0;
+    margin-top: 0px;
+    font-size: 17px;
+    font-weight: bold;
+    color: #000;
+}
+
+#stripe-card-payment img.cc-icon {
+    margin-right: 5px;
+    width: 31px;
+    display: inline-block;
+    margin-bottom: 10px;
+}
+
+#stripe-card-payment .stripe-submit-button {
+    background-image: url(../img/lock-locked.png);
+    background-size: 12px 17px;
+    background-repeat: no-repeat;
+    background-position: 7px;
+    width: 210px;
+    position: relative;
+    display: inline-block;
+    padding: 5px 7px;
+    border: 1px solid rgba(77, 96, 113, 0.63);
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    font-weight: bold;
+    color: #fff;
+    background-color: rgb(91, 155, 213);
+    cursor: pointer;
+    margin-bottom: 15px;
+}
+
+.stripe-payment-form {
+    display: block;
+    border: 1px solid #d6d4d4;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    font-size: 17px;
+    line-height: 23px;
+    color: #333;
+    font-weight: bold;
+    padding: 18px 40px 10px 20px;
+    letter-spacing: -1px;
+    position: relative;
+    background: #fbfbfb;
+    cursor: pointer;
+    margin-bottom: 9px;
+}
