--- a/views/css/checkout.css
+++ b/views/css/checkout.css
@@ -18,7 +18,7 @@
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
 }
 
-#stripe-card-payment {
+#HOOK_PAYMENT #stripe-card-payment {
     border: 1px solid #d6d4d4;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -28,7 +28,7 @@
     background: #fbfbfb;
 }
 
-#stripe-card-payment h3 {
+#HOOK_PAYMENT #stripe-card-payment h3 {
     padding-bottom: 10px;
     margin-bottom: 0;
     margin-top: 0px;
@@ -37,14 +37,14 @@
     color: #000;
 }
 
-#stripe-card-payment img.cc-icon {
+#HOOK_PAYMENT #stripe-card-payment img.cc-icon {
     margin-right: 5px;
     width: 31px;
     display: inline-block;
     margin-bottom: 10px;
 }
 
-#stripe-card-payment .stripe-submit-button {
+#HOOK_PAYMENT #stripe-card-payment .stripe-submit-button {
     background-image: url(../img/lock-locked.png);
     background-size: 12px 17px;
     background-repeat: no-repeat;
@@ -63,7 +63,7 @@
     margin-bottom: 15px;
 }
 
-.stripe-payment-form {
+#HOOK_PAYMENT .stripe-payment-form {
     display: block;
     border: 1px solid #d6d4d4;
     -moz-border-radius: 4px;
