--- a/views/css/started.css
+++ b/views/css/started.css
@@ -178,6 +178,13 @@ label[for="applepay_googlepay"] {
     vertical-align: top;
 }
 
+.faq-title {
+    display: block;
+    margin: 10px 0px;
+    font-size: 16px;
+    font-weight: bold;
+}
+
 /* Retina support */
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
 only screen and (min--moz-device-pixel-ratio: 1.5),
