--- a/_dev/scss/tabs.scss
+++ b/_dev/scss/tabs.scss
@@ -1,174 +1,198 @@
+/**
+ * NOTICE OF LICENSE
+ *
+ * This source file is subject to a commercial license from SARL 202 ecommerce
+ * Use, copy, modification or distribution of this source file without written
+ * license agreement from the SARL 202 ecommerce is strictly forbidden.
+ * In order to obtain a license, please contact us: tech@202-ecommerce.com
+ * ...........................................................................
+ * INFORMATION SUR LA LICENCE D'UTILISATION
+ *
+ * L'utilisation de ce fichier source est soumise a une licence commerciale
+ * concedee par la societe 202 ecommerce
+ * Toute utilisation, reproduction, modification ou distribution du present
+ * fichier source sans contrat de licence ecrit de la part de la SARL 202 ecommerce est
+ * expressement interdite.
+ * Pour obtenir une licence, veuillez contacter 202-ecommerce <tech@202-ecommerce.com>
+ * ...........................................................................
+ *
+ * @author    202-ecommerce <tech@202-ecommerce.com>
+ * @copyright Copyright (c) 202-ecommerce
+ * @license   Commercial license
+ */
+
 .tabs nav a {
-	text-decoration: none;
-	display: block;
+  display: block;
+  text-decoration: none;
 }
 
 .tabs nav li.tab-current a {
-	color: #fff;
+  color: #fff;
 }
 
 /* Content */
 .content-wrap {
-	min-height: 455px;
-	position: relative;
+  position: relative;
+  min-height: 455px;
 }
 
 .content-wrap section {
-	display: none;
-	margin: 0 auto;
-	padding: 1em;
+  display: none;
+  padding: 1em;
+  margin: 0 auto;
 }
 
 .tabs-logo {
-	display: block;
-	padding: 0;
-	width: 100%;
-	text-align: left;
-	margin: 0 auto;
-	max-width: 250px;
+  display: block;
+  width: 100%;
+  max-width: 250px;
+  padding: 0;
+  margin: 0 auto;
+  text-align: left;
 }
 
 .content-wrap section.content-current {
-	display: block;
+  display: block;
 }
 
 .list-group-item {
-	padding: 10px 15px !important;
+  padding: 10px 15px !important;
 }
 
 .pstab-icon {
-	width: 25px;
-	height: 25px;
-	font-size: 20px;
-	margin-right: 10px;
- 	padding: 5px;
-	text-align: center;
+  width: 25px;
+  height: 25px;
+  padding: 5px;
+  margin-right: 10px;
+  font-size: 20px;
+  text-align: center;
 }
 
 .badge-module-tabs {
-	margin-top: 10px;
-	width: 10px;
-	height: 10px;
-	padding: 3px 3px;
+  width: 10px;
+  height: 10px;
+  padding: 3px;
+  margin-top: 10px;
 }
 
 .tab-info {
-	display: none;
-	color: #FFF;
-	padding-left: 5px;
-	background-color: #00aff0;
-	border-radius: 50%;
+  display: none;
+  padding-left: 5px;
+  color: #fff;
+  background-color: #00aff0;
+  border-radius: 50%;
 }
 
 .tab-warning {
-	color: #FFF !important;
-	padding-left: 5px;
-	background-color: #f4c178;
-	border-radius: 50%;
+  padding-left: 5px;
+  color: #fff !important;
+  background-color: #f4c178;
+  border-radius: 50%;
 }
 
 .tab-success {
-	color: #FFF !important;
-	background-color: #90cb5c;
-	padding-left: 5px;
-	border-radius: 50%;
+  padding-left: 5px;
+  color: #fff !important;
+  background-color: #90cb5c;
+  border-radius: 50%;
 }
+
 .tab-error {
-	font-weight: bold;
-	color: #FFF !important;
-	background-color: #a94442;
-	padding-left: 5px;
-	border-radius: 50%;
+  padding-left: 5px;
+  font-weight: bold;
+  color: #fff !important;
+  background-color: #a94442;
+  border-radius: 50%;
 }
 
 .tab-back {
-	width: 100%;
-	background-color: #ddd;
+  width: 100%;
+  background-color: #ddd;
 }
 
+// @TODO this file should probably be about 'tabs' only, as its name suggests.
+// faq stuff could be moved in its own file.
 .faq ul.faq-items {
-    padding: 0px;
-    list-style-type: none;
-    width: 100%;
+  width: 100%;
+  padding: 0;
+  list-style-type: none;
 }
+
 .faq ul.faq-items > li {
-    -moz-box-shadow: 0px 0px 10px -4px #BBBBBB;
-    -webkit-box-shadow: 0px 0px 10px -4px #BBBBBB;
-    -o-box-shadow: 0px 0px 10px -4px #BBBBBB;
-    box-shadow: 0px 0px 10px -4px #BBBBBB;
-    filter:progid:DXImageTransform.Microsoft.Shadow(color=#BBBBBB, Direction=180, Strength=10);
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius: 2px;
-    width: 100%;
-    margin-bottom: 20px;
-    padding: 20px;
-    cursor: pointer;
+  width: 100%;
+  padding: 20px;
+  margin-bottom: 20px;
+  cursor: pointer;
+  border-radius: 2px;
+  box-shadow: 0 0 10px -4px #bbb;
 }
+
 .faq ul.faq-items > li:hover {
-    -moz-box-shadow: 0px 0px 10px -4px #555555;
-    -webkit-box-shadow: 0px 0px 10px -4px #555555;
-    -o-box-shadow: 0px 0px 10px -4px #555555;
-    box-shadow: 0px 0px 10px -4px #555555;
-    filter:progid:DXImageTransform.Microsoft.Shadow(color=#555555, Direction=180, Strength=10);
+  box-shadow: 0 0 10px -4px #555;
 }
 
 .faq ul.faq-items > li .faq-trigger {
-    font-size: 20px;
-    color: #00aff0;
+  font-size: 20px;
+  color: #00aff0;
 }
 
 .faq ul.faq-items > li .faq-trigger:hover {
-    color: #00aff0;
-    text-decoration: none;
+  color: #00aff0;
+  text-decoration: none;
 }
 
 .faq ul.faq-items > li .faq-trigger:active {
-    color: #00aff0;
-    text-decoration: none;
+  color: #00aff0;
+  text-decoration: none;
 }
 
 .faq .expand {
-    font-size: 26px;
-    font-weight: 600;
+  font-size: 26px;
+  font-weight: 600;
 }
 
 .faq-content {
-    display: none;
-    padding-left: 15px;
-    padding-top: 20px;
-    line-height: 200%;
+  display: none;
+  padding-top: 20px;
+  padding-left: 15px;
+  line-height: 200%;
 }
 
 .faq-content a {
-    border-bottom: 1px dotted #555;
-    padding-bottom: -2px;
-    color: #555;
-    size: 16px;
-}
-.faq-content a:hover {
-    border-bottom: none;
-    text-decoration: none;
+  padding-bottom: -2px;
+  color: #555;
+  border-bottom: 1px dotted #555;
+  size: 16px;
 }
 
-label[for=secure_all], label[for=secure_only] {
-	width: 345px;
-	float: none;
-	text-align: left;
+.faq-content a:hover {
+  text-decoration: none;
+  border-bottom: none;
 }
-#section-shape-4 #secure_all, #section-shape-4 #secure_only {
-	display: inline-block;
-	margin:0;
-	vertical-align: top;
-	margin-top: 2px;
-	margin-right: 5px;
+
+label[for="secure_all"],
+label[for="secure_only"] {
+  float: none;
+  width: 345px;
+  text-align: left;
 }
+
+#section-shape-4 #secure_all,
+#section-shape-4 #secure_only {
+  display: inline-block;
+  margin: 0;
+  margin-top: 2px;
+  margin-right: 5px;
+  vertical-align: top;
+}
+
 #section-shape-4 .margin-form {
-	width: 387px;
-	box-sizing: content-box;
+  box-sizing: content-box;
+  width: 387px;
 }
-#section-shape-4 input[name=submit_secure] {
-    position: absolute;
-    right: 26px;
-    margin-top: -30px;
+
+#section-shape-4 input[name="submit_secure"] {
+  position: absolute;
+  right: 26px;
+  margin-top: -30px;
 }
