--- a/_dev/scss/checkout.scss
+++ b/_dev/scss/checkout.scss
@@ -53,7 +53,7 @@
   color: #fff;
   cursor: pointer;
   background-color: rgb(91, 155, 213);
-  background-image: url("$img_dir/lock-locked.png");
+  background-image: url(~img_dir/lock-locked.png);
   background-repeat: no-repeat;
   background-position: 7px;
   background-size: 12px 17px;
