--- a/views/css/admin.css
+++ b/views/css/admin.css
@@ -54,14 +54,14 @@
   line-height: 33px;
   color: #fff;
   text-shadow: 0 -1px 0 #03609e;
-  background: url("$img_dir/bg_btn-blue.png") left top no-repeat; }
+  background: url(../../views/img/bg_btn-blue.png) left top no-repeat; }
 
 .stripe-module-header a.stripe-module-create-btn span {
   display: block;
   height: 35px;
   padding: 0 20px 0 0;
   margin: 0 -20px 0 0;
-  background: url("$img_dir/bg_btn-blue.png") right bottom no-repeat; }
+  background: url(../../views/img/bg_btn-blue.png) right bottom no-repeat; }
 
 .stripe-module-wrap {
   width: 98%;
@@ -125,7 +125,7 @@
   color: #008cdd;
   text-decoration: none;
   text-shadow: 0 1px 0 #fff;
-  background: url("$img_dir/stripe-btn-arrow.png") left center no-repeat; }
+  background: url(../../views/img/stripe-btn-arrow.png) left center no-repeat; }
 
 .stripe-module-wrap a.stripe-module-btn:hover {
   text-decoration: underline; }
@@ -138,7 +138,7 @@
 .stripe-module-wrap ul li {
   padding: 0 0 0 15px;
   margin: 0;
-  background: url("$img_dir/checkmark-blue.png") left 5px no-repeat; }
+  background: url(../../views/img/checkmark-blue.png) left 5px no-repeat; }
 
 img.stripe-cc {
   margin: 0 40px 0 0;
