--- a/_dev/scss/checkout.scss
+++ b/_dev/scss/checkout.scss
@@ -186,3 +186,35 @@ form#stripe-card-payment #cards-logos {
 #powered_by_stripe {
     margin-bottom: 20px;
 }
+
+.stripe-card-cardholdername input,
+#stripe-card-number,
+#stripe-card-expiry,
+#stripe-card-cvc,
+#stripe-card-postalcode {
+    border: #CCCCCC solid 1px;
+    margin-bottom: 15px;
+    padding: 3px;
+    box-sizing: border-box;
+    font-size: 15px;
+    width: 210px;
+    background-color: #ffffff;
+    position: relative;
+    display: block;
+    height: 25px;
+}
+
+#stripe-card-element,
+#stripe-card-cardholdername {
+    padding: 6px 12px;
+    margin-bottom: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    display: block;
+}
+
+#stripe-card-cardholdername {
+    width: 50%;
+}
