refs #20811 : unionpay icon added

--- a/_dev/scss/checkout.scss
+++ b/_dev/scss/checkout.scss
@@ -161,7 +161,7 @@ form#stripe-card-payment #cards-logos {
 #stripe-card-number img.img-card {
     position: absolute;
     top: 2px;
-    right: 0;
+    right: 2px;
     width: 31px;
 }
 
