display card payment informations only if it's possible to make a payment with ApplePay or GooglePay

--- a/_dev/scss/checkout.scss
+++ b/_dev/scss/checkout.scss
@@ -85,6 +85,7 @@
 .card-payment-informations {
   margin-top: 10px;
   text-align: center;
+  display: none;
 }
 
 .payment-options #stripe-card-payment {
