fix css for themes that display flex on strip form-row

--- a/_dev/scss/checkout.scss
+++ b/_dev/scss/checkout.scss
@@ -157,6 +157,7 @@ form#stripe-card-payment #cards-logos {
 
 .stripe-payment-form .form-row {
     margin: 0 auto;
+    display: block;
 }
 
 #stripe-card-number img.img-card {
