adapt code for prestashop 1.6 save card

--- a/_dev/scss/checkout.scss
+++ b/_dev/scss/checkout.scss
@@ -220,3 +220,11 @@ form#stripe-card-payment #cards-logos {
 #stripe-card-cardholdername {
     width: 50%;
 }
+
+#stripe-card-payment .label16 {
+    padding: 0px;
+    letter-spacing: 0px;
+    color: #777777;
+    font-size: 14px;
+    font-weight: normal;
+}
