indentation changes in BO configuration + disable and hide children inputs

--- a/_dev/scss/_started.scss
+++ b/_dev/scss/_started.scss
@@ -400,6 +400,14 @@ label[for="applepay_googlepay"] {
   vertical-align: top;
 }
 
+.form-group span.left20,
+.form-group input.left20,
+.form-group div.left20,
+.form-group p.left20 {
+    display: inline-block;
+    margin-left: 20px;
+}
+
 /* Retina support */
 @media only screen and (resolution: 150dpi) {
   .stripe-connect span::before,
